# cqp-tree

./: .gitignore  CONTRIBUTING.md  HOW-TO-DEPLOY.md  HOW-TO-RELEASE.md  LIBRARY.md  README.md  conll_frontend.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: automation.yml
configurations/clarin-si/: server.toml
configurations/clarin-si/corpora/: classlawiki_bg.toml  classlawiki_bs.toml  classlawiki_hr.toml  classlawiki_sh.toml  classlawiki_sl.toml  classlawiki_sr.toml  engri.toml  gfida22.toml  hr500k.toml  kzb10.toml  maj68.toml  mewac.toml  parlamint10_es_cn.toml  parlamint10_il.toml  parlamint21_be.toml  parlamint21_bg.toml  parlamint21_cz.toml  parlamint21_dk.toml  parlamint21_es.toml  parlamint21_fr.toml  parlamint21_gb.toml  parlamint21_hr.toml  parlamint21_hu.toml  parlamint21_is.toml  parlamint21_it.toml  parlamint21_lt.toml  parlamint21_lv.toml  parlamint21_nl.toml  parlamint21_pl.toml  parlamint21_si.toml  parlamint21_tr.toml  parlamint30_at.toml  parlamint30_ba.toml  parlamint30_be.toml  parlamint30_bg.toml  parlamint30_cz.toml  parlamint30_dk.toml  parlamint30_ee.toml  parlamint30_es_ct.toml  parlamint30_es_ga.toml  (+116 more)
configurations/spraakbanken-korp/: server.toml
configurations/spraakbanken-korp/corpora/: korp.toml
configurations/template/: server.toml
configurations/template/corpora/: example.toml
doc/: conll_frontend.md  depsearch.md
docker/: Dockerfile  compose.yml
resources/: example.conllu  example.conlluc  example.grew
src/cqp_tree/: __init__.py  cqp.py  example_based.py  query.py  utils.py  version.py
src/cqp_tree/cli/: __init__.py  main.py
src/cqp_tree/configuration/: __init__.py  argparse_compat.py  clarinsi.toml  configuration.py  configurations.py  declaration.py  profile.py  values.py
src/cqp_tree/configuration/corpus_configs/: gfida.toml  gfida22.toml  solar30_orig.toml  suk11.toml
src/cqp_tree/configuration/profiles/: korp.toml  ud.toml
src/cqp_tree/deptreepy/: __init__.py  translator.py
src/cqp_tree/frontends/: README.md  antlr_utils.py
src/cqp_tree/frontends/conll/: __init__.py  translator.py
src/cqp_tree/frontends/conllu/: __init__.py  translator.py
src/cqp_tree/frontends/conlluc/: __init__.py  tools.py  translator.py
src/cqp_tree/frontends/depsearch/: __init__.py  translator.py
src/cqp_tree/frontends/depsearch/antlr/: Depsearch.g4  DepsearchLexer.py  DepsearchParser.py  README.txt  __init__.py
src/cqp_tree/frontends/deptreepy/: __init__.py  translator.py
src/cqp_tree/frontends/grew/: __init__.py  translator.py
src/cqp_tree/frontends/grew/antlr/: .gitignore  Grew.g4  GrewLexer.py  GrewParser.py  README.txt
src/cqp_tree/grew/: translator.py
src/cqp_tree/grew/antlr/: Grew.g4
src/cqp_tree/translation/: __init__.py  configurable.py  configuration.py  cqp.py  errors.py  query.py  regex.py  registry.py  smart_constructors.py
src/cqp_tree/translation/backends/: common.py  cwb.py  sketch_engine.py
src/cqp_tree/web/: __init__.py  app.py  autodiscovery.py  run_on_url.py  server.py
src/cqp_tree/web/static/: about.html  external_search_not_possible.html  index.html  scripts.js  setting_section.html  slovene_examples.html  snippet.html  style.css
src/cqp_tree/web/templates/: index.html  layout.html
tests/: test_arrangements.py  test_ast_validation.py  test_configuration.py  test_query_builder.py  test_syntax.py  test_utils.py
tests/conll/: full.conllu  invalid.conllu  mwes.conllu  partial.conllu  test_translator.py  underspecified.conllu
tests/depsearch/: test_parser.py  test_translation.py
tests/deptreepy/: test_translator.py
tests/grew/: supported_constructs.grew  test_parser.py  test_translator.py
