[project]
name = 'cqp-tree'
version = '1.0'
description = 'Translate queries from tree-based formats to sequential CQP format used by Corpus Workbench.'
keywords = ['corpus search', 'query translation', 'corpus workbench', 'korp']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator',
    'Topic :: Text Processing :: Linguistic',
    'Typing :: Typed'
]

license = 'MPL-2.0'
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [
    { name = 'Niklas Deworetzki' },
    { name = 'Arianna Masciolini' },
]

requires-python = '>=3.12,<4'
dependencies = [
    'antlr4-python3-runtime==4.13.2',
    'pyparsing==3.2.5',
    'conllu==6.0.0',
    'Flask==3.1.2',
    'waitress==3.0.2',
]

[project.urls]
Homepage = 'https://github.com/Niklas-Deworetzki/cqp-tree'
Issues = 'https://github.com/Niklas-Deworetzki/cqp-tree/issues'

[tool.setuptools.packages.find]
where = ['src']
exclude = ['tests']

[tool.setuptools.package-data]
'*' = ['*.html', '*.toml']

[project.scripts]
cqp-tree = 'cqp_tree.cli:main'
cqp-tree-web = 'cqp_tree.web:main'

[tool.black]
line-length = 100
skip-string-normalization = true
extend-exclude = 'antlr'

[tool.pylint]
max-line-length = 100
min-public-methods = 1
max-locals = 20
max-positional-arguments = 7
max-args = 10
ignore-paths = [
    'src/cqp_tree/frontends/grew/antlr/',
    'src/cqp_tree/frontends/depsearch/antlr/',
]
allowed-redefined-builtins = [
    'id'
]
disable = [
    'W0511', # We want to mark unfinished code or missing features as such.

    # Positional arguments appear to be out of order?
    'W1114', # arguments-out-of-order

    # We sometimes need to have broad exceptions, as we work with external code.
    'W0718', # broad-exception-caught

    # Control flow should be readable, not dictated by a tool.
    'R0911', # too-many-return-statements
    'R0912', # too-many-branches
    'R1705', # no-else-return
    'R1720', # no-else-raise

    # Not everything needs a docstring (for now).
    'C0114', # missing-module-docstring
    'C0115', # missing-class-docstring
    'C0116', # missing-function-docstring
]
